Fixes logo alignment

--- a/style/less/responsive.less
+++ b/style/less/responsive.less
@@ -369,6 +369,17 @@
 	.message {
 		margin-right: 30px;
 	}
+
+	.references {
+		li {
+			text-align: center;
+		}
+
+		svg {
+			width: auto;
+			max-width: 210px;
+		}
+	}
 }
 
 /*
