--- a/style/less/site.less
+++ b/style/less/site.less
@@ -705,6 +705,10 @@ textarea {
 	li {
 		margin-bottom: @gutter;
 	}
+
+	svg {
+		width: 170px;
+	}
 }
 
 .preload {
